--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "joi": "^17.6.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.6.3",
-    "node-cron": "^3.0.2"
+    "mongoose": "^6.6.3"
   },
   "devDependencies": {
     "concurrently": "^7.4.0"
