--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "^2.1.3",
     "react-select": "^5.4.0",
-    "web-vitals": "^2.1.4",
-    "zxcvbn": "^4.4.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
