--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=9000
 NODE_ENV=development
 MONGODB=mongodb://localhost:27017/dailyplanner
-MONGODB_URI=mongodb+srv://temitope:temitope@dayplanner.wyvif5e.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://Temi89:temi2002@cluster0.lhbfvxu.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=kjegnri5489ueroKJDGNUR950343JKNF344
 JWT_REFRESH_TOKEN=werefner34343jnjfjfjdvkjener3NSJFNJNF3NSNDJ34FSNW3
