--- a/client/package.json
+++ b/client/package.json
@@ -1,48 +1,30 @@
 {
-  "name": "client",
+  "name": "clientx",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@mdi/js": "^7.0.96",
     "@mdi/react": "^1.6.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "isemail": "^3.2.0",
-    "react": "^18.2.0",
+    "next": "12.3.1",
+    "next-auth": "^4.12.2",
+    "react": "18.2.0",
     "react-datepicker": "^4.8.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-password-checklist": "^1.4.2",
-    "react-router": "^6.4.1",
-    "react-router-dom": "^6.4.1",
-    "react-scripts": "^2.1.3",
-    "react-select": "^5.4.0",
-    "web-vitals": "^2.1.4"
+    "react-select": "^5.4.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@svgr/webpack": "^6.4.0",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1"
   }
 }
